# funnel

./: .copier-answers.yml  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  renovate.json
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html  index.md  marimo.html  marimo.md  reports.html
marimo/: __init__.html  demo.html
pdoc/: funnel.html  ifunnel.html  index.html  search.js
pdoc/funnel/: add.html  financial_data_preprocessing.html  models.html  settings.html
pdoc/funnel/models/: MST.html  (+9 more)
pdoc/ifunnel/: financial_data_preprocessing.html  models.html  settings.html
src/funnel/: app.py
src/ifunnel/: __init__.py  settings.py
src/tests/: __init__.py  conftest.py  test_1_scenario_generation.py  test_2_cvar_model.py  test_3_mvo_model.py  test_bot.py  test_clustering.py  test_data_analyser.py  test_docs.py  test_notebooks.py  test_package.py  test_trivial.py
tests/: test_1_scenario_generation.py  test_clustering.py  test_import.py  test_notebooks.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_066de69109a1b38b___init___py.html  z_066de69109a1b38b_add_py.html  z_066de69109a1b38b_settings_py.html  z_1440bb04bfe10513_MVOlifecycleModel_py.html  z_1440bb04bfe10513___init___py.html  z_1440bb04bfe10513_glidePathCreator_py.html  z_3071a398b1139ae8_MVOlifecycleModel_py.html  z_3071a398b1139ae8___init___py.html  z_3071a398b1139ae8_glidePathCreator_py.html  z_4fd0b22655b4fa79_CVaRmodel_py.html  z_4fd0b22655b4fa79_CVaRtargets_py.html  z_4fd0b22655b4fa79_Clustering_py.html  z_4fd0b22655b4fa79_MST_py.html  z_4fd0b22655b4fa79_MVOmodel_py.html  z_4fd0b22655b4fa79_MVOtargets_py.html  z_4fd0b22655b4fa79_ScenarioGeneration_py.html  z_4fd0b22655b4fa79___init___py.html  z_4fd0b22655b4fa79_dataAnalyser_py.html  z_4fd0b22655b4fa79_main_py.html  z_85f4d5db62bab628___init___py.html  z_85f4d5db62bab628_settings_py.html  z_a9906a0335be8514___init___py.html  z_a9906a0335be8514_clean_downloaded_data_py.html  z_a9906a0335be8514_gams_transfer_py.html  z_a9906a0335be8514_get_algostrata_data_py.html  z_a9906a0335be8514_get_yahoo_data_py.html  z_aa1980c89c3b8c8b___init___py.html  z_aa1980c89c3b8c8b_clean_downloaded_data_py.html  z_aa1980c89c3b8c8b_gams_transfer_py.html  z_aa1980c89c3b8c8b_get_algostrata_data_py.html  z_aa1980c89c3b8c8b_get_yahoo_data_py.html  z_d44f4c199af47105_CVaRmodel_py.html  z_d44f4c199af47105_CVaRtargets_py.html  z_d44f4c199af47105_Clustering_py.html  z_d44f4c199af47105_MST_py.html  z_d44f4c199af47105_MVOmodel_py.html  (+5 more)
tests/html-report/: report.html
(+65 files in other folders)
