[project]
name = 'funnel'
version = "0.0.0"
description = "Backend for the investment-funnel"
# Please add authors and correct the email...
authors = [{name='tschm', email= 'tschm@mailinator.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]

[project.urls]
repository = "https://github.com/tschm/funnel"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funnel"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/funnel"
]

[tool.bandit]
exclude_dirs = ["tests"]
