[project]
name = 'ifunnel'
version = "0.0.0"
description = "Backend for the investment-funnel"
# Please add authors and correct the email...
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'},
           {name="Petr Vanek", email="abc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clarabel>=0.10.0",
    "cvxpy-base>=1.6.1",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "mosek>=11.0.8",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "pydantic-settings>=2.8.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "yfinance>=0.2.54",
]

[project.urls]
repository = "https://github.com/tschm/funnel"

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "ecos>=2.0.14",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ifunnel"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/ifunnel"
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel","pyarrow","ecos","mosek","cvxpy-base"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.package_module_name_map]
python-dateutil = ["dateutil"]
scikit-learn = ["sklearn"]
cvxpy-base = ["cvxpy"]  # not strictly needed, but safe
